# Flicker

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package.json  tailwind.config.js
src/: App.css  App.tsx  colors.ts  config.ts  constants.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: ErrorBoundary.tsx  HotkeyInput.tsx  Login.tsx  MobileSidebar.tsx  ScreenshotPreview.tsx  Settings.tsx  SettingsPage.tsx  Sidebar.tsx  SplashScreen.tsx  Toaster.tsx  UpdateNotification.tsx  UploadArea.tsx  UploadHistory.tsx
src/components/auth/login/: Login.tsx
src/components/settings/: Settings.tsx  SettingsPage.tsx
src/components/shared/: PageLayout.tsx  SplashScreen.tsx
src/components/ui/: Logo.tsx
src/components/ui/Static/: MobileSidebar.tsx  Sidebar.tsx
src/components/upload/: TestUploadModal.tsx  UploadArea.tsx  UploadHistory.tsx
src/hooks/: useConfig.ts  useHotkeys.ts  useTheme.ts  useUpdater.ts
src/styles/: MobileSidebar.css  Sidebar.css
